--- a/style.css
+++ b/style.css
@@ -98,4 +98,15 @@
     color: #fff;
     border: none;
     border-radius: 5px;
+    transition: 0.4s;
+    cursor: pointer;
+  }
+
+  button:hover{
+    background-color: #3eb413;
+  }
+
+  #resultado{
+    font-size: 1.5rem;
+    margin-top: 2rem;
   }
