--- a/style.css
+++ b/style.css
@@ -1,112 +1,45 @@
-.roboto-thin {
-    font-family: "Roboto", serif;
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  .roboto-light {
-    font-family: "Roboto", serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .roboto-regular {
-    font-family: "Roboto", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .roboto-medium {
-    font-family: "Roboto", serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .roboto-bold {
-    font-family: "Roboto", serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .roboto-black {
-    font-family: "Roboto", serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-  
-  .roboto-thin-italic {
-    font-family: "Roboto", serif;
-    font-weight: 100;
-    font-style: italic;
-  }
-  
-  .roboto-light-italic {
-    font-family: "Roboto", serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .roboto-regular-italic {
-    font-family: "Roboto", serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .roboto-medium-italic {
-    font-family: "Roboto", serif;
-    font-weight: 500;
-    font-style: italic;
-  }
-  
-  .roboto-bold-italic {
-    font-family: "Roboto", serif;
-    font-weight: 700;
-    font-style: italic;
-  }
-  
-  .roboto-black-italic {
-    font-family: "Roboto", serif;
-    font-weight: 900;
-    font-style: italic;
-  }
-  
-  h1{
-    text-align: center;
-  }
+* {
+  font-family: Arial;
+}
 
-  .container{
-    max-width: 400px;
-    margin: 0 auto;
-  }
+h1 {
+  text-align: center;
+}
 
-  label{
-    display: block;
-    margin-bottom: 10px;
-  }
+.container {
+  max-width: 400px;
+  margin: 0 auto;
+}
 
-  input{
+label {
+  display: block;
+  margin-bottom: 10px;
+}
 
-    padding: 5px;
-    font-size: 1rem;
+input {
+  padding: 0.4rem;
+  font-size: 1rem;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 0.6rem;
+}
 
-  }
+button {
+  padding: 0.8rem;
+  font-size: 1rem;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  transition: 0.4s;
+  cursor: pointer;
+}
 
-  button{
-    padding: 1rem;
-    font-size: 1rem;
-    background-color: #fcaf50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    transition: 0.4s;
-    cursor: pointer;
-  }
+button:hover {
+  background-color: #3e8e41;
+}
 
-  button:hover{
-    background-color: #3eb413;
-  }
-
-  #resultado{
-    font-size: 1.5rem;
-    margin-top: 2rem;
-  }
+#resultado {
+  font-size: 1.5rem;
+  margin-top: 2rem;
+}
